* Added default option for the timer description. You can select between VDR,
  TV-Browser and longest description. The timer options dialog then will use
  the appropriate description. (suggested by ChrisBox)
* Fixed popup menu trigger for windows in different dialogs. The popup menu
  should work now for every timer and recording in every overview and list.
  (reported by ChrisBox)

Lazy Bones 0.4
===============================================================================
* Fixed bug in the timer state handling
* Timers can now be deleted when they are recording
* Timers are fully editable
* Added a timer conflict detection
* Added a timeline, which shows timers and conflicts
* Timer overview and timeline show an icon if recording
* Improved the channel configuration of the settings dialog
* Channel list can be restricted by the channelnumber
* Improved automatical assignment of channels in the settings dialog
* Improved assignment of timers to TV-Browser programs
* Added a recording overview: Possibility to delete recordings and start 
  playback on VDR
* Screenshots are only taken, if the remote control is visible
* Added function to play recordings via VDR and via player
* Fixed bug in TimerManager.getTimer, which sometimes returned a wrong timer, 
  which resulted in a wrong timer being deleted
* Added support for different charsets
* Added config params for the streaming url 
  and for the streaming url of recordings
* Ported logging to lsf4j.
* Dialogs have a special modal exclusion mode to avoid blocking windows
* Improved Look and Feel integration of custom components
* Removed ProgramSelectionDialog. Not assigned timers can now be assigned with
  the context menu
* Added a DebugConsole under Settings->General, which shows the Lazy Bones log.
* Fixed bug in SpinnerTimeModel (reported by docmax)
* Added support for DVB-S2 parameters in channels.conf 
  (reported by reelmichael)